--- a/style.css
+++ b/style.css
@@ -239,8 +239,12 @@ h2 {
 @media (max-width: 900px) {
     main { padding: 18px 2vw; }
     .card-list { flex-direction: column; gap: 18px;}
+    header h1 { font-size: 2.0em; }
+    header > div { font-size: 16px; }
 }
 @media (max-width: 600px) {
+    header h1 { font-size: 1.6em; }
+    header > div { font-size: 12px; }
     nav .tab { padding: 10px 8px; font-size: 15px; }
     main { padding: 8px 2vw; }
     .calc-form { padding: 18px 6px; }
